HT-603:Fixed alignment issue in password component

--- a/components/src/core/components/Input/password-input.scss
+++ b/components/src/core/components/Input/password-input.scss
@@ -17,10 +17,10 @@
   .password-view-icon-container {
     position: absolute;
     border-radius: 0.65rem;
-    right: -0.15rem;
+    right: -0.18rem;
     height: 2.2rem;
     width: 2.2rem;
-    top: 0.3rem;
+    top: 0.32rem;
     // background: #e8eaef;
     display: -ms-flexbox;
     display: flex;
